########################################
# Headers
########################################

clinkcav_header = \
	cybergarage/upnp/std/av/ccontent.h \
	cybergarage/upnp/std/av/cdidl.h \
	cybergarage/upnp/std/av/cmd5.h \
	cybergarage/upnp/std/av/cmediaserver.h \
	cybergarage/upnp/std/av/cresource.h

########################################
# Library
########################################

nobase_include_HEADERS = \
	$(clinkcav_header)
